nanousd-properties.h


NANOUSD_API
nusd_result_t nusd_attribute_set_double3_array(nusd_stage_t stage, char const* attribute_path, double* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_double4(nusd_stage_t stage, char const* attribute_path, double* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_double4_array(nusd_stage_t stage, char const* attribute_path, double* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_get_int(nusd_stage_t stage, char const* attribute_path, double time_code, int* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_int_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_int_array_t* int_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_int2(nusd_stage_t stage, char const* attribute_path, double time_code, int* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_int2_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_int2_array_t* int2_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_int3(nusd_stage_t stage, char const* attribute_path, double time_code, int* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_int3_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_int3_array_t* int3_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_int4(nusd_stage_t stage, char const* attribute_path, double time_code, int* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_int4_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_int4_array_t* int4_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_int64(nusd_stage_t stage, char const* attribute_path, double time_code, int64_t* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_int64_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_int64_array_t* int64_array);
NANOUSD_API
nusd_result_t nusd_attribute_set_int(nusd_stage_t stage, char const* attribute_path, int value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int_array(nusd_stage_t stage, char const* attribute_path, int* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int2(nusd_stage_t stage, char const* attribute_path, int* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int2_array(nusd_stage_t stage, char const* attribute_path, int* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int3(nusd_stage_t stage, char const* attribute_path, int* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int3_array(nusd_stage_t stage, char const* attribute_path, int* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int4(nusd_stage_t stage, char const* attribute_path, int* value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int4_array(nusd_stage_t stage, char const* attribute_path, int* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int64(nusd_stage_t stage, char const* attribute_path, int64_t value, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_set_int64_array(nusd_stage_t stage, char const* attribute_path, int64_t* data, size_t num_elements, double time_code);
NANOUSD_API
nusd_result_t nusd_attribute_get_bool(nusd_stage_t stage, char const* attribute_path, double time_code, bool* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_bool_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_bool_array_t* bool_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_matrix2d(nusd_stage_t stage, char const* attribute_path, double time_code, double* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_matrix2d_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_matrix2d_array_t* matrix2d_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_matrix3d(nusd_stage_t stage, char const* attribute_path, double time_code, double* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_matrix3d_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_matrix3d_array_t* matrix3d_array);
NANOUSD_API
nusd_result_t nusd_attribute_get_matrix4d(nusd_stage_t stage, char const* attribute_path, double time_code, double* value);
NANOUSD_API
nusd_result_t nusd_attribute_get_matrix4d_array(nusd_stage_t stage, char const* attribute_path, double time_code, nusd_matrix4d_array_t* matrix4d_array);
NANOUSD_API
nusd_result_t nusd_attribute_set_bool(nusd_stage_t stage, char const* attribute_path, bool value, double time_code);