libnanousd/nanousd-array.h

typedef struct nusd_bool_array_s* nusd_bool_array_t;
typedef struct nusd_int_array_s* nusd_int_array_t;
typedef struct nusd_int2_array_s* nusd_int2_array_t;
typedef struct nusd_int3_array_s* nusd_int3_array_t;
typedef struct nusd_int4_array_s* nusd_int4_array_t;
typedef struct nusd_int64_array_s* nusd_int64_array_t;
typedef struct nusd_matrix2d_array_s* nusd_matrix2d_array_t;
typedef struct nusd_matrix3d_array_s* nusd_matrix3d_array_t;
typedef struct nusd_matrix4d_array_s* nusd_matrix4d_array_t;